# gip

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: scheduler_architecture.md
include/backends/: BackendManager.hpp  IBackend.hpp  ONNXRuntimeBackend.hpp
include/common/: ConfigLoad.hpp  Convertors.hpp  Logger.hpp  ModelDef.hpp  ThreadPool.hpp
include/common/models/: ConfigModels.hpp  InternalModels.hpp
include/core/: Inference.hpp  OperationRepository.hpp
include/core/operations/: OperationUpdater.hpp
include/core/preprocess/: InferencePreprocessor.hpp
include/core/scenario/: IScenario.hpp  InferenceScenario.hpp
include/model_manager/: ModelManager.hpp
include/scheduler/: PolicySelector.hpp  Scheduler.hpp
include/scheduler/strategies/: IStrategy.hpp  StrategyBatch.hpp  StrategyFIFO.hpp
include/server/: InferService.hpp
include/server/http/: InferServiceApiImpl.hpp
src/: CMakeLists.txt  main.cpp
src/backends/: BackendManager.cpp  CMakeLists.txt  ONNXRuntimeBackend.cpp
src/common/: CMakeLists.txt  ConfigLoad.cpp  Convertors.cpp  ThreadPool.cpp
src/core/: CMakeLists.txt  Inference.cpp  OperationRepository.cpp
src/core/operations/: OperationUpdater.cpp
src/core/preprocess/: InferencePreprocessor.cpp
src/core/scenario/: IScenario.cpp  InferenceScenario.cpp
src/model_manager/: CMakeLists.txt  ModelManager.cpp
src/scheduler/: CMakeLists.txt  Scheduler.cpp
src/scheduler/strategies/: IStrategy.cpp  StrategyFIFO.cpp  StratrgyBatch.cpp
src/server/: CMakeLists.txt  InferService.cpp
src/server/http/: InferServiceApiImpl.cpp
